[package]
name = "mergeinto"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
kamadak-exif = "^0"
regex = "^0"

iced = { version = "^0", features = ["async-std", "image", "debug"] }
serde = { version = "1.0", features = ["derive"] }
rfd = { version = "^0", default-features = false, features = ["xdg-portal"]}
chrono = "^0"
image = "^0"
