[package]
name = "mergeinto02"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
kamadak-exif = "^0"
regex = "^0"
iced = { version = "^0", features = ["async-std", "image", "debug"] }
serde = { version = "^0", features = ["derive"] }
# serde = { version = "1.0", features = ["derive"] }
native-dialog = "^0"
chrono = "^0"
image = "^0"
