[package]
name = "mergeintoc1310"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "^0", features = ["async-std", "image", "debug"] }
kamadak-exif = "^0"
regex = "^0"
serde = { version = "^0", features = ["derive"] }
rfd = { version = "^0", features = ["xdg-portal"] }
chrono = "^0"
image = "^0"
